# beta

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lexer.rs  main.rs  parser.rs  tests.rs  utility.rs
src/commands/: main_command.rs  mod.rs  tests.rs
src/commands/main_command/: abstract_file.rs  lex.rs  mod.rs  parse.rs
src/ir_gen/: build.rs  compile.rs  constants.rs  functions.rs  initialize.rs  lambda.rs  mod.rs  tests.rs  types.rs  values.rs
src/ir_gen/values/: call.rs  constants.rs  destructors.rs  functions.rs  globals.rs  low.rs  members.rs  metadata.rs  mod.rs  names.rs  special.rs  without_captures.rs
src/ir_gen/values/captures/: mod.rs  tests.rs
src/ir_gen/values/tags/: args.rs  attributes.rs  builtin_type.rs  flow.rs  function.rs  mod.rs  param_flow.rs  ret.rs  structure.rs
src/parser/: mod.rs  tests.rs
src/typing/: abstraction.rs  ast.rs  checking.rs  definitions.rs  environment.rs  equivalence.rs  error.rs  evaluation.rs  expression.rs  mod.rs  read_back.rs  renaming.rs  tests.rs  type_error.rs  type_wrapper.rs  unification.rs  value.rs
src/typing/environment/: abstraction.rs  context.rs  mod.rs
